fixed alignment issue with overhealth card needing to be slighty bigger to match calendar and make bottom cards match map ending

--- a/src/App.scss
+++ b/src/App.scss
@@ -309,6 +309,8 @@ select.form-control {
     }
 }
 
+
+
 .metrics{
   display: flex;
   flex-direction: column;
@@ -335,6 +337,7 @@ select.form-control {
   }
   .contenthealth{
     font-size:4rem;
+    padding-bottom:2.5rem;
     color: #FF6D37;
   }
 }
